--- a/webappStocks/requirements.txt
+++ b/webappStocks/requirements.txt
@@ -1,10 +1,9 @@
 # Instalação das libs
 #removido crewai-tools
 yfinance==0.2.41
-crewai==0.28.8
-langchain==0.1.0
-langchain-openai==0.1.7
-duckduckgo-search==5.3.0
-
+langchain-community>=0.2.10,<0.3.0
+langchain-core>=0.2.27,<0.3.0
+duckduckgo-search
+streamlit
 # Adicionar biblioteca para funcinar dentro do streamlit cloud
 pysqlite3-binary
