--- a/webappStocks/requirements.txt
+++ b/webappStocks/requirements.txt
@@ -5,5 +5,6 @@ langchain-community>=0.2.10,<0.3.0
 langchain-core>=0.2.27,<0.3.0
 duckduckgo-search
 streamlit
+crewai==0.28.8
 # Adicionar biblioteca para funcinar dentro do streamlit cloud
 pysqlite3-binary
